<resources>
    <string name="app_name">Buddepas</string>
    <string name="title_activity_recipe">MainActivity</string>
    <string name="title_recipe">Recettes</string>
    <string name="title_calendar">Calendrier</string>
    <string name="title_shopping_list">Courses</string>
    <string name="title_ingredients_list">Stock</string>
    <string name="sign_out">Déconnexion</string>
    <string name="title_add_recipe">Ajouter une recette</string>
    <string name="title_ask_recipe_name">Nom de la recette</string>
    <string name="title_ask_recipe_kind">Type</string>
    <string name="title_ask_people_number">Nombre de personnes</string>
    <string name="title_ask_recipe_duration">Durée (en minutes)</string>
    <string name="loading">Chargement en cours...</string>
    <string name="ingredients">Ingrédients</string>
    <string name="steps">Étapes</string>
    <string name="cancel">Annuler</string>
    <string name="add_recipe">Ajouter la recette</string>
    <string name="amount">Quantité</string>
    <string name="unit">Unité</string>
    <string name="ingredient_name">Nom de l\'ingrédient</string>
    <string name="price">Prix</string>
    <string name="order">Ordre</string>
    <string name="description">Description</string>
    <string name="title_parameters">Paramètres</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="submit_parameters">Modifier les paramètres</string>
    <string name="budget">Budget</string>
    <string name="plat">Plat</string>
    <string name="title_add_ingredient">Ajouter un ingredient</string>
    <string name="ingredient_quantity">Quantité</string>
    <string name="ingredient_unit">Unité</string>
    <string name="title_add_ingredient_shopping">Ajouter un ingrédient à la liste de courses</string>
    <string name="ingredient_type">Type</string>
    <string name="add_ingredient">Ajouter l\'ingrédient</string>
    <string-array name="type_recette">
        <item></item>
        <item>Entrée</item>
        <item>Plat</item>
        <item>Dessert</item>
        <item>Autre</item>
    </string-array>
    <string-array name="select_type">
        <item>Entrée</item>
        <item>Plat</item>
        <item>Dessert</item>
        <item>Autre</item>
    </string-array>
    <string-array name="apport_recette">
        <item></item>
        <item>Féculents</item>
        <item>Légumes</item>
        <item>Viande</item>
        <item>Fruit</item>
        <item>Poisson</item>
        <item>Fromage</item>
        <item>Autre</item>
    </string-array>
    <string-array name="select_apport">
        <item>Féculents</item>
        <item>Légumes</item>
        <item>Viande</item>
        <item>Fruit</item>
        <item>Poisson</item>
        <item>Fromage</item>
        <item>Autre</item>
    </string-array>
    <string name="day">Jour</string>
    <string name="program">Programme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addRecipeToCalendar">Ajouter une recette au calendrier</string>
    <string name="confirm">Confirmer</string>
    <string name="selectDate">Choisir une date</string>
    <string name="for_the">Pour le</string>
    <string name="pick_recipe">Choisir une recette</string>
    <string name="recipe">Recette</string>
    <string name="at">au</string>
    <string name="pickTime">Choisir un moment</string>
    <string name="breakfast">Petit déjeuner</string>
    <string name="lunch">Déjeuner</string>
    <string name="afternoonSnack">Goûter</string>
    <string name="dinner">Dîner</string>
    <string name="snacks">Autres</string>
    <string name="today">Aujourd\'hui</string>
    <string name="generate">Générer une recette</string>
    <string name="kind">Type</string>
    <string-array name="time_array">
        <item>Petit déjeuner</item>
        <item>Déjeuner</item>
        <item>Goûter</item>
        <item>Dîner</item>
        <item>Autres</item>
    </string-array>
</resources>