<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_add_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_recipe"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title" />

        <TextView
            android:id="@+id/ask_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_add_recipe"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentLeft="true"
            android:text="@string/title_ask_recipe_name"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/input_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ask_recipe_name"
            android:textSize="@dimen/normal_text_size" />


        <TextView
            android:id="@+id/ask_recipe_kind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_recipe_name"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentLeft="true"
            android:text="@string/title_ask_recipe_kind"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/input_recipe_kind"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ask_recipe_kind"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/ask_people_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/input_recipe_name"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_ask_people_number"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/normal_text_size" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/input_people_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/ask_people_number"
            android:layout_below="@+id/ask_recipe_kind"
            android:layout_alignLeft="@id/ask_people_number"
            app:np_width="180dp"
            app:np_orientation="horizontal"
            app:np_height="40dp"
            app:np_dividerColor="@color/colorPrimary"
            app:np_min="1"
            app:np_max="10"
            app:np_selectedTextColor="@color/colorPrimary"
            app:np_selectedTextSize="@dimen/normal_text_size"
            app:np_textColor="@color/colorPrimary"
            app:np_textSize="@dimen/normal_text_size"
            app:np_value="1" />

        <TextView
            android:id="@+id/ask_recipe_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_recipe_kind"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_ask_recipe_duration"
            android:textSize="@dimen/normal_text_size" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/input_recipe_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ask_recipe_duration"
            app:np_width="180dp"
            app:np_orientation="horizontal"
            app:np_height="40dp"
            app:np_dividerColor="@color/colorPrimary"
            app:np_min="2"
            app:np_max="120"
            app:np_selectedTextColor="@color/colorPrimary"
            app:np_selectedTextSize="@dimen/normal_text_size"
            app:np_textColor="@color/colorPrimary"
            app:np_textSize="@dimen/normal_text_size"
            app:np_value="15" />

        <TextView
            android:id="@+id/ask_recipe_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/input_recipe_duration"
            android:text="@string/ingredients"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/add_new_recipe_ingredient_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="20dp"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_circle_outline_24px_orange"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/input_recipe_duration" />

        <LinearLayout
            android:id="@+id/linear_layout_ask_ingredients_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ask_recipe_ingredients">
            <TextView
                android:id="@+id/ask_ingredient_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/amount"
                android:textSize="@dimen/normal_text_size" />
            <TextView
                android:id="@+id/ask_ingredient_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/unit"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/ask_ingredient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/ingredient_name"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginStart="10dp" />
            <TextView
                android:id="@+id/ask_ingredient_price"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/price"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_input_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_below="@+id/linear_layout_ask_ingredients_data" />

        <TextView
            android:id="@+id/ask_recipe_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_view_input_recipe_ingredients"
            android:text="@string/steps"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/add_new_recipe_step_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_circle_outline_24px_orange"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/recycler_view_input_recipe_ingredients" />

        <LinearLayout
            android:id="@+id/linear_layout_ask_steps_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ask_recipe_steps">
            <TextView
                android:id="@+id/show_step_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/order"
                android:textSize="@dimen/normal_text_size" />
            <TextView
                android:id="@+id/ask_step_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/description"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginStart="20dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_input_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_below="@+id/linear_layout_ask_steps_data" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/recycler_view_input_recipe_steps">
            <Button
                android:id="@+id/cancel_new_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="20dp" />

            <Button
                android:id="@+id/submit_new_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_recipe"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>
        </LinearLayout>


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>