<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/programmed_recipe_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/today"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/programmed_recipe_breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/programmed_recipe_date"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/breakfast"
        android:textSize="24dp"
        android:textColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/programmed_recipe_array_breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/programmed_recipe_breakfast"/>

    <TextView
        android:id="@+id/programmed_recipe_lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/programmed_recipe_array_breakfast"
        android:layout_marginLeft="10dp"
        android:text="@string/lunch"
        android:textSize="24dp"
        android:textColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/programmed_recipe_array_lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/programmed_recipe_lunch"/>

    <TextView
        android:id="@+id/programmed_recipe_afternoon_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/programmed_recipe_array_lunch"
        android:layout_marginLeft="10dp"
        android:text="@string/afternoonSnack"
        android:textSize="24dp"
        android:textColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/programmed_recipe_array_afternoon_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/programmed_recipe_afternoon_snack"/>

    <TextView
        android:id="@+id/programmed_recipe_dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/programmed_recipe_array_afternoon_snack"
        android:layout_marginLeft="10dp"
        android:text="@string/dinner"
        android:textSize="24dp"
        android:textColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/programmed_recipe_array_dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/programmed_recipe_dinner"/>

    <TextView
        android:id="@+id/programmed_recipe_snacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/programmed_recipe_array_dinner"
        android:layout_marginLeft="10dp"
        android:text="@string/snacks"
        android:textSize="24dp"
        android:textColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/programmed_recipe_array_snacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/programmed_recipe_snacks"/>
</RelativeLayout>