<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.calendar.fragments.DayFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        Copyright 2017 Jhonny Barrios

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
        an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.-->

        <com.github.jhonnyx2012.horizontalpicker.HorizontalPicker
            android:id="@+id/datePicker"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            />

        <TextView
            android:id="@+id/day_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datePicker"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/breakfast"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/array_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/day_breakfast"/>

        <TextView
            android:id="@+id/day_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/array_breakfast"
            android:layout_marginLeft="10dp"
            android:text="@string/lunch"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/array_lunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/day_lunch"/>

        <TextView
            android:id="@+id/day_afternoon_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/array_lunch"
            android:layout_marginLeft="10dp"
            android:text="@string/afternoonSnack"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/array_afternoon_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/day_afternoon_snack"/>

        <TextView
            android:id="@+id/day_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/array_afternoon_snack"
            android:layout_marginLeft="10dp"
            android:text="@string/dinner"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/array_dinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/day_dinner"/>

        <TextView
            android:id="@+id/day_snacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/array_dinner"
            android:layout_marginLeft="10dp"
            android:text="@string/snacks"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/array_snacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="120dp"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/day_snacks"/>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>